@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1732] added node and group name for screen widget "triggers info" (Vedmak)
  - [ZBXNEXT-196] added "Show with unacknowledged" filter option for triggers screen (Vedmak)
  - [ZBX-1729] removed limitation of showings triggers in charts only by one item (Aly)
  - [ZBX-1729] removed excessive space in chart header,  informational messages (triggers, percentile) are separated (Aly)
